# subs-dowloader

./: README.md  pyproject.toml
src/subs_downloader/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  metadata.py  scanner.py
src/subs_downloader/providers/: __init__.py  opensubtitles.py
tests/: conftest.py  test_cli.py  test_downloader.py  test_metadata.py  test_scanner.py
tests/test_providers/: test_opensubtitles.py
