[project]
name = "subs-downloader"
version = "0.1.0"
description = "CLI tool that scans directories for video files and downloads matching subtitles"
readme = "README.md"
authors = [
    { name = "Michael Katsilieris", email = "mkatsili@netcompany.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
subs-dl = "subs_downloader.cli:main"

[project.optional-dependencies]
dotenv = ["python-dotenv>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
